* NEXT
- Added ~talon-list-get~ and ~talon-list-put~ for working with defined
  lists.  The former is also a generalized variable of the latter.

* 0.1.0 [2024-09-07 Sat]
Initial release.