@@ -16,7 +16,7 @@ expressions from talon.  If you don't already have this set up, add
 [[file:talon/evaluate-lisp.py]] to =~/.talon/user/= and make sure to run
 emacs as a server (see [[info:emacs#Emacs Server][Using Emacs as a Server]] in the Emacs manual).
 
-You can now define talon lists using the ~define-talon-list~ macro.
+You can now define talon lists using the ~phony-define-list~ macro.
 It takes three arguments: First, an emacs identifier for storing the
 list.  Second, the talon identifier.  Finally, an alist, where each
 entry maps an utterance to a value.
@@ -32,7 +32,7 @@ for usage in talon files.
 In emacs:
 
 #+begin_src emacs-lisp
-  (define-talon-list my/colors color
+  (phony-define-list my/colors color
     '(("white" . "#fffff")
       ("black" . "#000000")
       ("red" . "#ff0000")))
@@ -49,7 +49,7 @@ In talon:
 In emacs:
 
 #+begin_src emacs-lisp
-  (define-talon-list my/commands command
+  (phony-define-list my/commands command
     `(("save" . ,#'save-buffer)
       ("hello" . ,(lambda () (message "Hello %s!" (user-full-name))))))
 #+end_src
@@ -63,11 +63,11 @@ In talon:
 
 ** Accessing and modifying defined lists
 To access the value corresponding to an utterance, use the function
-~talon-list-get~.  This is a generalized variable, meaning you can use
+~phony-list-get~.  This is a generalized variable, meaning you can use
 ~setf~ to modify elements of it:
 
 #+begin_src elisp
-  (setf (talon-list-get "squash" my/colors) 'yellow)
+  (setf (phony-list-get "squash" my/colors) 'yellow)
 #+end_src
 
 This form allows you to add, remove and change values in the list.
