@@ -1,5 +1,7 @@
 * NEXT
-- Added ~talon-list-get~ and ~talon-list-put~ for working with defined
+- Renamed project from talon-list to phony.
+- Added rule definitions.
+- Added ~phony-list-get~ and ~phony-list-put~ for working with defined
   lists.  The former is also a generalized variable of the latter.
 
 * 0.1.0 [2024-09-07 Sat]
